stacks/activegate/vpc.yaml
Resources:
  Vpc:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC
  vpcPublicSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: eu-west-2a
      CidrBlock: 10.0.0.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'subnet-name'
          Value: Public
        - Key: 'subnet-type'
          Value: Public
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet1
  vpcPublicSubnet1RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet1
  vpcPublicSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref vpcPublicSubnet1RouteTable
      SubnetId: !Ref vpcPublicSubnet1
  vpcPublicSubnet1DefaultRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref vpcPublicSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref vpcInternetGateway
    DependsOn:
      - vpcGatewayAttachment
  vpcPublicSubnet1EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet1
  vpcPublicSubnet1NATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      SubnetId: !Ref vpcPublicSubnet1
      AllocationId: !GetAtt
        - vpcPublicSubnet1EIP
        - AllocationId
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet1
    DependsOn:
      - vpcPublicSubnet1DefaultRoute
      - vpcPublicSubnet1RouteTableAssociation
  vpcPublicSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: eu-west-2b
      CidrBlock: 10.0.32.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'subnet-name'
          Value: Public
        - Key: 'subnet-type'
          Value: Public
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet2
  vpcPublicSubnet2RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet2
  vpcPublicSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref vpcPublicSubnet2RouteTable
      SubnetId: !Ref vpcPublicSubnet2
  vpcPublicSubnet2DefaultRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref vpcPublicSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref vpcInternetGateway
    DependsOn:
      - vpcGatewayAttachment
  vpcPublicSubnet2EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet2
  vpcPublicSubnet2NATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      SubnetId: !Ref vpcPublicSubnet2
      AllocationId: !GetAtt
        - vpcPublicSubnet2EIP
        - AllocationId
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet2
    DependsOn:
      - vpcPublicSubnet2DefaultRoute
      - vpcPublicSubnet2RouteTableAssociation
  vpcPublicSubnet3Subnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: eu-west-2c
      CidrBlock: 10.0.64.0/19
      MapPublicIpOnLaunch: true
      Tags:
        - Key: 'subnet-name'
          Value: Public
        - Key: 'subnet-type'
          Value: Public
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet3
  vpcPublicSubnet3RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet3
  vpcPublicSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref vpcPublicSubnet3RouteTable
      SubnetId: !Ref vpcPublicSubnet3Subnet
  vpcPublicSubnet3DefaultRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref vpcPublicSubnet3RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref vpcInternetGateway
    DependsOn:
      - vpcGatewayAttachment
  vpcPublicSubnet3EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet3
  vpcPublicSubnet3NATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      SubnetId: !Ref vpcPublicSubnet3Subnet
      AllocationId: !GetAtt
        - vpcPublicSubnet3EIP
        - AllocationId
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PublicSubnet3
    DependsOn:
      - vpcPublicSubnet3DefaultRoute
      - vpcPublicSubnet3RouteTableAssociation
  vpcPrivateSubnet1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: eu-west-2a
      CidrBlock: 10.0.96.0/19
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'subnet-name'
          Value: Private
        - Key: 'subnet-type'
          Value: Private
        - Key: Name
          Value: DynatraceActivegateVPC/PrivateSubnet1
  vpcPrivateSubnet1RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PrivateSubnet1
  vpcPrivateSubnet1RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref vpcPrivateSubnet1RouteTable
      SubnetId: !Ref vpcPrivateSubnet1
  vpcPrivateSubnet1DefaultRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref vpcPrivateSubnet1RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref vpcPublicSubnet1NATGateway
  vpcPrivateSubnet2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: eu-west-2b
      CidrBlock: 10.0.128.0/19
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'subnet-name'
          Value: Private
        - Key: 'subnet-type'
          Value: Private
        - Key: Name
          Value: DynatraceActivegateVPC/PrivateSubnet2
  vpcPrivateSubnet2RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PrivateSubnet2
  vpcPrivateSubnet2RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref vpcPrivateSubnet2RouteTable
      SubnetId: !Ref vpcPrivateSubnet2
  vpcPrivateSubnet2DefaultRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref vpcPrivateSubnet2RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref vpcPublicSubnet2NATGateway
  vpcPrivateSubnet3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref Vpc
      AvailabilityZone: eu-west-2c
      CidrBlock: 10.0.160.0/19
      MapPublicIpOnLaunch: false
      Tags:
        - Key: 'subnet-name'
          Value: Private
        - Key: 'subnet-type'
          Value: Private
        - Key: Name
          Value: DynatraceActivegateVPC/PrivateSubnet3
  vpcPrivateSubnet3RouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC/PrivateSubnet3
  vpcPrivateSubnet3RouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref vpcPrivateSubnet3RouteTable
      SubnetId: !Ref vpcPrivateSubnet3
  vpcPrivateSubnet3DefaultRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref vpcPrivateSubnet3RouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref vpcPublicSubnet3NATGateway
  vpcInternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: DynatraceActivegateVPC
  vpcGatewayAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref vpcInternetGateway
  DynatraceVPCEndpointSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: DynatraceActivegateVPC/DynatraceVPCEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: !GetAtt
            - Vpc
            - CidrBlock
          Description: !Join
            - ''
            - - 'from '
              - !GetAtt
                - Vpc
                - CidrBlock
              - ':443'
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      VpcId: !Ref Vpc
  DynatraceVPCEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      ServiceName: com.amazonaws.vpce.eu-west-2.vpce-svc-087a837d5ef308cec
      VpcId: !Ref Vpc
      PrivateDnsEnabled: false
      SecurityGroupIds:
        - !GetAtt
          - DynatraceVPCEndpointSecurityGroup
          - GroupId
      SubnetIds:
        - !Ref vpcPrivateSubnet1
        - !Ref vpcPrivateSubnet2
        - !Ref vpcPrivateSubnet3
      VpcEndpointType: Interface
  prodHostedZone:
    Type: 'AWS::Route53::HostedZone'
    Properties:
      Name: bhe21058.live.dynatrace.com.
      VPCs:
        - VPCId: !Ref Vpc
          VPCRegion: eu-west-2
  prodRecordSet:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      Name: bhe21058.live.dynatrace.com.
      Type: A
      AliasTarget:
        DNSName: !Select
          - 1
          - !Split
            - ':'
            - !Select
              - 0
              - !GetAtt
                - DynatraceVPCEndpoint
                - DnsEntries
        HostedZoneId: !Select
          - 0
          - !Split
            - ':'
            - !Select
              - 0
              - !GetAtt
                - DynatraceVPCEndpoint
                - DnsEntries
      HostedZoneId: !Ref prodHostedZone
  nonprodHostedZone:
    Type: 'AWS::Route53::HostedZone'
    Properties:
      Name: khw46367.live.dynatrace.com.
      VPCs:
        - VPCId: !Ref Vpc
          VPCRegion: eu-west-2
  nonprodRecordSet:
    Type: 'AWS::Route53::RecordSet'
    Properties:
      Name: khw46367.live.dynatrace.com.
      Type: A
      AliasTarget:
        DNSName: !Select
          - 1
          - !Split
            - ':'
            - !Select
              - 0
              - !GetAtt
                - DynatraceVPCEndpoint
                - DnsEntries
        HostedZoneId: !Select
          - 0
          - !Split
            - ':'
            - !Select
              - 0
              - !GetAtt
                - DynatraceVPCEndpoint
                - DnsEntries
      HostedZoneId: !Ref nonprodHostedZone

Outputs:
  VpcId:
    Description: The ID of the VPC.
    Value: !Ref Vpc
    Export:
      Name: !Sub "${AWS::StackName}-VpcId"

  AWSServicesEndpointSecurityGroupId:
    Description: The ID of the security group attached to the AWS services VPC endpoints.
    Value: !GetAtt DynatraceVPCEndpointSecurityGroup.GroupId
    Export:
      Name: !Sub "${AWS::StackName}-AWSServicesEndpointSecurityGroupId"

  PrivateSubnetIdA:
    Description: The ID of the private subnet for Availability Zone A.
    Value: !Ref vpcPrivateSubnet1
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetIdA"

  PrivateSubnetIdB:
    Description: The ID of the private subnet for Availability Zone B.
    Value: !Ref vpcPrivateSubnet2
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetIdB"

  PrivateSubnetIdC:
    Description: The ID of the private subnet for Availability Zone C.
    Value: !Ref vpcPrivateSubnet3
    Export:
      Name: !Sub "${AWS::StackName}-PrivateSubnetIdC"
